module_5/ex05/log/build_2024-11-17_20-50-41/my_movement/stderr.log
  File "/home/yuichi-katagiri/Subjects/Robotics/module_5/ex05/install/my_movement/lib/python3.10/site-packages/my_movement/star_movement.py", line 1
    \#!/usr/bin/env python3
     ^
SyntaxError: unexpected character after line continuation character

